--- a/brand.html
+++ b/brand.html
@@ -1,20 +1,20 @@
-<!DOCTYPE HTML>
-<html>
-<head> 
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" >
-	<meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible' >
-	<title>品牌</title> 
-	<link rel="stylesheet" type="text/css" media="all" href="assets/bootstrap2.3.2/css/bootstrap.css" >
- 	<link rel="stylesheet" type="text/css" media="all" href="style.css" >
-	<meta name="viewport" content="user-scalable=yes, width=device-width, initial-scale=0.6, maximum-scale=3.0" >
-	<meta property="fb:admins" content="100001658741248" />
-	<meta http-equiv="x-dns-prefetch-control" content="off">
-	<meta http-equiv="Window-target" content="_top" >
-	<meta http-equiv="content-language" content="zh-TW" >
-	<meta http-equiv="imagetoolbar" content="no" >
-	<meta name="resource-type" content="document" >
-	<meta name="date" content="2013" >
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<!DOCTYPE html>
+<!--[if lt IE 9]><html lang="zh-tw" class="no-js lte-ie8" xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#" xmlns:fb="https://www.facebook.com/2008/fbml"><![endif]-->
+<!--[if gt IE 8]><!--><html lang="zh-tw" class="no-js" xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#" xmlns:fb="https://www.facebook.com/2008/fbml"><!--<![endif]-->
+<head profile="http://www.w3.org/2005/10/profile">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<title>關於品牌</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+<meta http-equiv="x-dns-prefetch-control" content="off">
+<meta http-equiv="Window-target" content="_top" >
+<meta http-equiv="content-language" content="zh-TW" >
+<meta http-equiv="imagetoolbar" content="no" >
+<meta name="resource-type" content="document" >
+<meta name="date" content="2013" >
+<link rel="stylesheet" type="text/css" media="all" href="assets/bootstrap2.3.2/css/bootstrap.css" >
+<link rel="stylesheet" type="text/css" media="all" href="style.css" >
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 </head>
 <body>
 	<div class="container">
@@ -24,11 +24,31 @@
 				<div class="span9 clearfix">
 					<div class="pull-left">
 						<ul class="unstyled">
-							<li class="pull-left"><a href="dott_brand.html" class="btn">附點品牌</a></li>
-							<li class="pull-left"><a href="product_list.html" class="btn">產品介紹</a></li>
-							<li class="pull-left"><a href="news.html" class="btn">最新消息</a></li>
-							<li class="pull-left"><a href="buy.html" class="btn">購買通路</a></li>
-							<li class="pull-left"><a href="contact.html" class="btn">聯絡我們</a></li>
+							<li class="pull-left">
+								<a href="dott_brand.html" class="nav-item">
+									品牌介紹<span>Brand</span>
+								</a>
+							</li>
+							<li class="pull-left">
+								<a href="product_list.html" class="nav-item">
+									產品介紹<span>Product</span>
+								</a>
+							</li>
+							<li class="pull-left">
+								<a href="news.html" class="nav-item">
+									最新消息<span>News</span>
+								</a>
+							</li>
+							<li class="pull-left">
+								<a href="buy.html" class="nav-item">
+									購買通路<span>Buy</span>
+								</a>
+							</li>
+							<li class="pull-left">
+								<a href="contact.html" class="nav-item">
+									聯絡我們<span>Contact</span>
+								</a>
+							</li>
 						</ul>
 					</div>
 				</div>
@@ -37,52 +57,49 @@
 		<div class="main-content">
 			<hr class="dashed-hr margin-bottom-none"></hr>
 			<div class="row">
-				<div class="span3">
-					<h3>品牌</h3>
-					<ul class="unstyled">
-						<li><a href="">這是列表項目</a></li>
-						<li><a href="">這是列表項目</a></li>
-						<li><a href="">這是列表項目</a></li>
-						<li><a href="">這是列表項目</a></li>
-						<li><a href="">這是列表項目</a></li>
+				<div class="span2">
+					<ul class="unstyled sidebar-ul margin-top-20">
+						<li><span><strong>品牌介紹</strong></span></li>
+						<li><a href="#">附點</a></li>
+						<li><a href="#top"><i class="icon-arrow-up"></i>top</a></li>
 					</ul>
 				</div>
-				<div class="span8 left-dash-border">
-					<div class="row margin-top-20 margin-left-20">
+				<div class="span9 left-dash-border">
+					<div class="row brand-content-div">
 						<div class="span3">
 							<a href="#"><img src="http://placekitten.com/220/200" /></a>
 						</div>
-						<div class="span4">
+						<div class="span5">
 							<h3>子項目標題</h3>
 							<a href="#"><p>Nullam quligula, eget lacinia odio sem nec elit.……（繼續閱讀）</p></a>
 						</div>
 					</div>
 					<hr class="dashed-hr margin-bottom-none"></hr>
-					<div class="row margin-top-20 margin-left-20">
+					<div class="row brand-content-div">
 						<div class="span3">
 							<a href="#"><img src="http://placekitten.com/220/200" /></a>
 						</div>
-						<div class="span4">
+						<div class="span5">
 							<h3>子項目標題</h3>
 							<a href="#"><p>Nullam quligula, eget lacinia odio sem nec elit.……（繼續閱讀）</p></a>
 						</div>
 					</div>
 					<hr class="dashed-hr margin-bottom-none"></hr>
-					<div class="row margin-top-20 margin-left-20">
+					<div class="row brand-content-div">
 						<div class="span3">
 							<a href="#"><img src="http://placekitten.com/220/200" /></a>
 						</div>
-						<div class="span4">
+						<div class="span5">
 							<h3>子項目標題</h3>
 							<a href="#"><p>Nullam quligula, eget lacinia odio sem nec elit.……（繼續閱讀）</p></a>
 						</div>
 					</div>
 					<hr class="dashed-hr margin-bottom-none"></hr>
-					<div class="row margin-top-20 margin-left-20">
+					<div class="row brand-content-div">
 						<div class="span3">
 							<a href="#"><img src="http://placekitten.com/220/200" /></a>
 						</div>
-						<div class="span4">
+						<div class="span5">
 							<h3>子項目標題</h3>
 							<a href="#"><p>Nullam quligula, eget lacinia odio sem nec elit.……（繼續閱讀）</p></a>
 						</div>
@@ -93,7 +110,7 @@
 		<div class="footer clearfix">
 			<div class="row">
 				<div class="span6">
-					電話 (XX) XXXX-XXXX<span>地址 XXX</span><
+					電話 (XX) XXXX-XXXX<span>地址 XXX</span>
 				</div>
 				<div class="span4 offset2">
 					版權所有 © 2013 Comlink All Rights Reserved.
