--- a/contact.html
+++ b/contact.html
@@ -1,20 +1,20 @@
-<!DOCTYPE HTML>
-<html>
-<head> 
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" >
-	<meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible' >
-	<title>聯絡我們</title> 
-	<link rel="stylesheet" type="text/css" media="all" href="assets/bootstrap2.3.2/css/bootstrap.css" >
- 	<link rel="stylesheet" type="text/css" media="all" href="style.css" >
-	<meta name="viewport" content="user-scalable=yes, width=device-width, initial-scale=0.6, maximum-scale=3.0" >
-	<meta property="fb:admins" content="100001658741248" />
-	<meta http-equiv="x-dns-prefetch-control" content="off">
-	<meta http-equiv="Window-target" content="_top" >
-	<meta http-equiv="content-language" content="zh-TW" >
-	<meta http-equiv="imagetoolbar" content="no" >
-	<meta name="resource-type" content="document" >
-	<meta name="date" content="2013" >
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<!DOCTYPE html>
+<!--[if lt IE 9]><html lang="zh-tw" class="no-js lte-ie8" xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#" xmlns:fb="https://www.facebook.com/2008/fbml"><![endif]-->
+<!--[if gt IE 8]><!--><html lang="zh-tw" class="no-js" xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#" xmlns:fb="https://www.facebook.com/2008/fbml"><!--<![endif]-->
+<head profile="http://www.w3.org/2005/10/profile">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<title>聯絡我們</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+<meta http-equiv="x-dns-prefetch-control" content="off">
+<meta http-equiv="Window-target" content="_top" >
+<meta http-equiv="content-language" content="zh-TW" >
+<meta http-equiv="imagetoolbar" content="no" >
+<meta name="resource-type" content="document" >
+<meta name="date" content="2013" >
+<link rel="stylesheet" type="text/css" media="all" href="assets/bootstrap2.3.2/css/bootstrap.css" >
+<link rel="stylesheet" type="text/css" media="all" href="style.css" >
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 </head>
 <body>
 	<div class="container">
@@ -24,11 +24,31 @@
 				<div class="span9 clearfix">
 					<div class="pull-left">
 						<ul class="unstyled">
-							<li class="pull-left"><a href="dott_brand.html" class="btn">附點品牌</a></li>
-							<li class="pull-left"><a href="product_list.html" class="btn">產品介紹</a></li>
-							<li class="pull-left"><a href="news.html" class="btn">最新消息</a></li>
-							<li class="pull-left"><a href="buy.html" class="btn">購買通路</a></li>
-							<li class="pull-left"><a href="contact.html" class="btn">聯絡我們</a></li>
+							<li class="pull-left">
+								<a href="dott_brand.html" class="nav-item">
+									品牌介紹<span>Brand</span>
+								</a>
+							</li>
+							<li class="pull-left">
+								<a href="product_list.html" class="nav-item">
+									產品介紹<span>Product</span>
+								</a>
+							</li>
+							<li class="pull-left">
+								<a href="news.html" class="nav-item">
+									最新消息<span>News</span>
+								</a>
+							</li>
+							<li class="pull-left">
+								<a href="buy.html" class="nav-item">
+									購買通路<span>Buy</span>
+								</a>
+							</li>
+							<li class="pull-left">
+								<a href="contact.html" class="nav-item">
+									聯絡我們<span>Contact</span>
+								</a>
+							</li>
 						</ul>
 					</div>
 				</div>
@@ -36,70 +56,75 @@
 		</div>
 		<hr class="dashed-hr"></hr>
 		<div class="main-content">
-			<form class="form-horizontal">
-				<div class="control-group">
-					<label class="control-label" for="type">問題類型</label>
-					<div class="controls">
-						<select name="type">
-							<option>異業合作</option>
-							<option>代理行銷</option>
-							<option>其他（留言處可說明）</option>
-						</select>
-					</div>
+			<div class="row">
+				<div class="span6 offset3">
+				<h3 class="contact-title">Contact Us</h3>
+					<form class="form-horizontal">
+						<div class="control-group">
+							<label class="control-label" for="type">哪種問題</label>
+							<div class="controls">
+								<select name="type">
+									<option>異業合作</option>
+									<option>代理行銷</option>
+									<option>其他（留言處可說明）</option>
+								</select>
+							</div>
+						</div>
+						<div class="control-group">
+							<label class="control-label" for="name">姓名</label>
+							<div class="controls">
+								<input type="text" id="name" placeholder="請輸入您的姓名">
+							</div>
+						</div>
+						<div class="control-group">
+							<label class="control-label" for="phone">電話</label>
+							<div class="controls">
+								<input type="text" id="phone" placeholder="請輸入您的電話號碼">
+							</div>
+						</div>
+						<div class="control-group">
+							<label class="control-label" for="mobilePhone">手機</label>
+							<div class="controls">
+								<input type="text" id="mobilePhone" placeholder="請輸入您的手機號碼">
+							</div>
+						</div>
+						<div class="control-group">
+							<label class="control-label" for="email">電子信箱</label>
+							<div class="controls">
+								<input type="text" id="email" placeholder="請輸入您的Email信箱">
+							</div>
+						</div>
+						<div class="control-group">
+							<label class="control-label" for="contactTime">何時方便</label>
+							<div class="controls">
+								<select name="contactTime">
+									<option>白天 8:00~12:00</option>
+									<option>下午 14:00~18:00</option>
+									<option>晚上 18:00~22:00</option>
+								</select>
+							</div>
+						</div>
+						<div class="control-group">
+							<label class="control-label" for="message">內容</label>
+							<div class="controls">
+								<textarea id="message"></textarea>
+							</div>
+						</div>
+						<div class="control-group">
+							<label class="control-label" for="validCode">驗證碼</label>
+							<div class="controls">
+								<img src="http://placekitten.com/180/100" /><br />
+								<input type="text" id="validCode" placeholder="請輸入驗證碼">
+							</div>
+						</div>
+						<div class="control-group">
+							<div class="controls">
+								<button type="submit" class="btn">送出</button>
+							</div>
+						</div>
+					</form>
 				</div>
-				<div class="control-group">
-					<label class="control-label" for="name">Name</label>
-					<div class="controls">
-						<input type="text" id="name" placeholder="請輸入您的姓名">
-					</div>
-				</div>
-				<div class="control-group">
-					<label class="control-label" for="phone">Phone</label>
-					<div class="controls">
-						<input type="text" id="phone" placeholder="請輸入您的電話號碼">
-					</div>
-				</div>
-				<div class="control-group">
-					<label class="control-label" for="mobilePhone">Mobile Phone</label>
-					<div class="controls">
-						<input type="text" id="mobilePhone" placeholder="請輸入您的手機號碼">
-					</div>
-				</div>
-				<div class="control-group">
-					<label class="control-label" for="email">Email</label>
-					<div class="controls">
-						<input type="text" id="email" placeholder="請輸入您的Email信箱">
-					</div>
-				</div>
-				<div class="control-group">
-					<label class="control-label" for="contactTime">方便聯絡時間</label>
-					<div class="controls">
-						<select name="contactTime">
-							<option>白天 8:00~12:00</option>
-							<option>下午 14:00~18:00</option>
-							<option>晚上 18:00~22:00</option>
-						</select>
-					</div>
-				</div>
-				<div class="control-group">
-					<label class="control-label" for="message">留言</label>
-					<div class="controls">
-						<textarea id="message"></textarea>
-					</div>
-				</div>
-				<div class="control-group">
-					<label class="control-label" for="validCode">驗證碼</label>
-					<div class="controls">
-						<img src="http://placekitten.com/180/100" /><br />
-						<input type="text" id="validCode" placeholder="請輸入驗證碼">
-					</div>
-				</div>
-				<div class="control-group">
-					<div class="controls">
-						<button type="submit" class="btn">送出</button>
-					</div>
-				</div>
-			</form>
+			</div>
 		</div>
 		<hr class="dashed-hr"></hr>
 		<div class="footer clearfix">
