--- a/news.html
+++ b/news.html
@@ -1,20 +1,20 @@
-<!DOCTYPE HTML>
-<html>
-<head> 
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" >
-	<meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible' >
-	<title>品牌</title> 
-	<link rel="stylesheet" type="text/css" media="all" href="assets/bootstrap2.3.2/css/bootstrap.css" >
- 	<link rel="stylesheet" type="text/css" media="all" href="style.css" >
-	<meta name="viewport" content="user-scalable=yes, width=device-width, initial-scale=0.6, maximum-scale=3.0" >
-	<meta property="fb:admins" content="100001658741248" />
-	<meta http-equiv="x-dns-prefetch-control" content="off">
-	<meta http-equiv="Window-target" content="_top" >
-	<meta http-equiv="content-language" content="zh-TW" >
-	<meta http-equiv="imagetoolbar" content="no" >
-	<meta name="resource-type" content="document" >
-	<meta name="date" content="2013" >
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<!DOCTYPE html>
+<!--[if lt IE 9]><html lang="zh-tw" class="no-js lte-ie8" xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#" xmlns:fb="https://www.facebook.com/2008/fbml"><![endif]-->
+<!--[if gt IE 8]><!--><html lang="zh-tw" class="no-js" xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#" xmlns:fb="https://www.facebook.com/2008/fbml"><!--<![endif]-->
+<head profile="http://www.w3.org/2005/10/profile">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<title>最新消息</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+<meta http-equiv="x-dns-prefetch-control" content="off">
+<meta http-equiv="Window-target" content="_top" >
+<meta http-equiv="content-language" content="zh-TW" >
+<meta http-equiv="imagetoolbar" content="no" >
+<meta name="resource-type" content="document" >
+<meta name="date" content="2013" >
+<link rel="stylesheet" type="text/css" media="all" href="assets/bootstrap2.3.2/css/bootstrap.css" >
+<link rel="stylesheet" type="text/css" media="all" href="style.css" >
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 </head>
 <body>
 	<div class="container">
@@ -24,11 +24,31 @@
 				<div class="span9 clearfix">
 					<div class="pull-left">
 						<ul class="unstyled">
-							<li class="pull-left"><a href="dott_brand.html" class="btn">附點品牌</a></li>
-							<li class="pull-left"><a href="product_list.html" class="btn">產品介紹</a></li>
-							<li class="pull-left"><a href="news.html" class="btn">最新消息</a></li>
-							<li class="pull-left"><a href="buy.html" class="btn">購買通路</a></li>
-							<li class="pull-left"><a href="contact.html" class="btn">聯絡我們</a></li>
+							<li class="pull-left">
+								<a href="dott_brand.html" class="nav-item">
+									品牌介紹<span>Brand</span>
+								</a>
+							</li>
+							<li class="pull-left">
+								<a href="product_list.html" class="nav-item">
+									產品介紹<span>Product</span>
+								</a>
+							</li>
+							<li class="pull-left">
+								<a href="news.html" class="nav-item">
+									最新消息<span>News</span>
+								</a>
+							</li>
+							<li class="pull-left">
+								<a href="buy.html" class="nav-item">
+									購買通路<span>Buy</span>
+								</a>
+							</li>
+							<li class="pull-left">
+								<a href="contact.html" class="nav-item">
+									聯絡我們<span>Contact</span>
+								</a>
+							</li>
 						</ul>
 					</div>
 				</div>
@@ -37,21 +57,21 @@
 		<hr class="dashed-hr"></hr>
 		<div class="main-content">
 			<div class="row margin-top-20">
-				<div class="span2">2013.05.24</div>
+				<div class="span2"><strong>2013.05.24</strong></div>
 				<div class="span8">
 					<img src="http://placekitten.com/700/100">
 					<p>因驚讓緊手安義充觀進利風新爸路黃過，斯老太黑命面金運話，山破了際、廣調樣說至力又以叫有市位的線。都十所合日員求，山科留三飛主格飯呢、樹同告道才媽們此看統車電去一想國了過？</p>
 				</div>
 			</div>
 			<div class="row margin-top-20">
-				<div class="span2">2013.05.24</div>
+				<div class="span2"><strong>2013.05.24</strong></div>
 				<div class="span8">
 					<img src="http://placekitten.com/700/100">
 					<p>因驚讓緊手安義充觀進利風新爸路黃過，斯老太黑命面金運話，山破了際、廣調樣說至力又以叫有市位的線。都十所合日員求，山科留三飛主格飯呢、樹同告道才媽們此看統車電去一想國了過？</p>
 				</div>
 			</div>
 			<div class="row margin-top-20">
-				<div class="span2">2013.05.24</div>
+				<div class="span2"><strong>2013.05.24</strong></div>
 				<div class="span8">
 					<img src="http://placekitten.com/700/100">
 					<p>因驚讓緊手安義充觀進利風新爸路黃過，斯老太黑命面金運話，山破了際、廣調樣說至力又以叫有市位的線。都十所合日員求，山科留三飛主格飯呢、樹同告道才媽們此看統車電去一想國了過？</p>
@@ -62,7 +82,7 @@
 		<div class="footer clearfix">
 			<div class="row">
 				<div class="span6">
-					電話 (XX) XXXX-XXXX<span>地址 XXX</span><
+					電話 (XX) XXXX-XXXX<span>地址 XXX</span>
 				</div>
 				<div class="span4 offset2">
 					版權所有 © 2013 Comlink All Rights Reserved.
