--- a/product.html
+++ b/product.html
@@ -1,20 +1,20 @@
-<!DOCTYPE HTML>
-<html>
-<head> 
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" >
-	<meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible' >
-	<title>產品介紹</title> 
-	<link rel="stylesheet" type="text/css" media="all" href="assets/bootstrap2.3.2/css/bootstrap.css" >
- 	<link rel="stylesheet" type="text/css" media="all" href="style.css" >
-	<meta name="viewport" content="user-scalable=yes, width=device-width, initial-scale=0.6, maximum-scale=3.0" >
-	<meta property="fb:admins" content="100001658741248" />
-	<meta http-equiv="x-dns-prefetch-control" content="off">
-	<meta http-equiv="Window-target" content="_top" >
-	<meta http-equiv="content-language" content="zh-TW" >
-	<meta http-equiv="imagetoolbar" content="no" >
-	<meta name="resource-type" content="document" >
-	<meta name="date" content="2013" >
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<!DOCTYPE html>
+<!--[if lt IE 9]><html lang="zh-tw" class="no-js lte-ie8" xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#" xmlns:fb="https://www.facebook.com/2008/fbml"><![endif]-->
+<!--[if gt IE 8]><!--><html lang="zh-tw" class="no-js" xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#" xmlns:fb="https://www.facebook.com/2008/fbml"><!--<![endif]-->
+<head profile="http://www.w3.org/2005/10/profile">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<title>產品介紹</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+<meta http-equiv="x-dns-prefetch-control" content="off">
+<meta http-equiv="Window-target" content="_top" >
+<meta http-equiv="content-language" content="zh-TW" >
+<meta http-equiv="imagetoolbar" content="no" >
+<meta name="resource-type" content="document" >
+<meta name="date" content="2013" >
+<link rel="stylesheet" type="text/css" media="all" href="assets/bootstrap2.3.2/css/bootstrap.css" >
+<link rel="stylesheet" type="text/css" media="all" href="style.css" >
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 </head>
 <body>
 	<div class="container">
@@ -24,11 +24,31 @@
 				<div class="span9 clearfix">
 					<div class="pull-left">
 						<ul class="unstyled">
-							<li class="pull-left"><a href="dott_brand.html" class="btn">附點品牌</a></li>
-							<li class="pull-left"><a href="product_list.html" class="btn">產品介紹</a></li>
-							<li class="pull-left"><a href="news.html" class="btn">最新消息</a></li>
-							<li class="pull-left"><a href="buy.html" class="btn">購買通路</a></li>
-							<li class="pull-left"><a href="contact.html" class="btn">聯絡我們</a></li>
+							<li class="pull-left">
+								<a href="dott_brand.html" class="nav-item">
+									品牌介紹<span>Brand</span>
+								</a>
+							</li>
+							<li class="pull-left">
+								<a href="product_list.html" class="nav-item">
+									產品介紹<span>Product</span>
+								</a>
+							</li>
+							<li class="pull-left">
+								<a href="news.html" class="nav-item">
+									最新消息<span>News</span>
+								</a>
+							</li>
+							<li class="pull-left">
+								<a href="buy.html" class="nav-item">
+									購買通路<span>Buy</span>
+								</a>
+							</li>
+							<li class="pull-left">
+								<a href="contact.html" class="nav-item">
+									聯絡我們<span>Contact</span>
+								</a>
+							</li>
 						</ul>
 					</div>
 				</div>
@@ -38,13 +58,14 @@
 			<hr class="dashed-hr margin-bottom-none"></hr>
 			<div class="row">
 				<div class="span3">
-					<h3>產品介紹</h3>
-					<ul class="unstyled">
-						<li><a href="">這是列表項目</a></li>
-						<li><a href="">這是列表項目</a></li>
-						<li><a href="">這是列表項目</a></li>
-						<li><a href="">這是列表項目</a></li>
-						<li><a href="">這是列表項目</a></li>
+					<ul class="unstyled sidebar-ul margin-top-40">
+						<li><span><strong>週邊商品</strong></span></li>
+						<li><a href="#">馬克杯</a></li>
+						<li><a href="#">貼紙</a></li>
+						<li><a href="#">大事紀</a></li>
+						<li><span><strong>設計商品</strong></span></li>
+						<li><a href="#">冰中劍</a></li>
+						<li class="no-border"><a href="#top"><i class="icon-arrow-up"></i>top</a></li>
 					</ul>
 				</div>
 				<div class="span8 left-dash-border">
